--- a/style.css
+++ b/style.css
@@ -55,6 +55,10 @@ body {
   padding-block: 1.5rem;
   font-size: clamp(2rem, 2.2vw, 2.5rem);
 }
+.heading:hover,
+.heading:active {
+  color: var(--yellow-color);
+}
 .description {
   color: var(--Gray-color-500);
   font-size: clamp(1.4rem, 1.6vw, 1.8rem);
